compilation.out
Executing the C code of file './material/code-generation-test/OK_GER10.c'
Error when executing the code generated by the C compiler (exit code 139)
Executing the C code of file './material/code-generation-test/OK_GER01.c'
7 0 1 2 3 4 5 6 7
7 0 1 2 3 4 5 6 7 
Executing the C code of file './material/code-generation-test/OK_GER02.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file './material/code-generation-test/OK_GER03.c'
6 1 2 3 4 5 6
6 1 2 3 4 5 6 
Executing the C code of file Error when executing the code generated by the C compiler (exit code 129)
Executing the C code of file './material/code-generation-test/OK_GER05.c'

Ok-ger05
The output should be what you give as input.
Type in six numbers
111111
Executing the C code of file './material/code-generation-test/OK_GER06.c'
7 1 2 3 4 5 6 7
7 1 2 3 4 5 6 7 
Executing the C code of file './material/code-generation-test/OK_GER07.c'
0
0
Executing the C code of file './material/code-generation-test/OK_GER08.c'
1 1 2 2 3 3 4 5 6 7
1 1 2 2 3 3 4 5 6 7 
Executing the C code of file './material/code-generation-test/OK_GER09.c'
1 1 2 2 3 3 4 4
1 1  2 2  3 3  4 4
 
Executing the C code of file './material/code-generation-test/OK_GER11.c'
4 1 2 3 4
4 1  2 3  2 
Executing the C code of file './material/code-generation-test/OK_GER12.c'
1 2 1 2 1 2 1 2
1 2 1 2 1 2 1 2 
Executing the C code of file './material/code-generation-test/OK_GER13.c'
Error when executing the code generated by the C compiler (exit code 139)
Error when compiling the C code of file './material/code-generation-test/OK_GER14.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-test/OK_GER14.c: In function ‘_Program_run’:
./material/code-generation-test/OK_GER14.c:202:25: error: invalid use of void expression
  202 |     printf("%d", (_d->vt[6] )(_d));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER14.c:205:25: error: invalid use of void expression
  205 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER14.c:208:25: error: invalid use of void expression
  208 |     printf("%d", (_b->vt[2] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER14.c:211:25: error: invalid use of void expression
  211 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
Executing the C code of file './material/code-generation-test/OK_GER15.c'
1 2 1 2 3 4 3 4 5 6 5 6
1 2 1 2 1 2 1 2 5 6 5 6 
Error when compiling the C code of file './material/code-generation-test/OK_GER16.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-test/OK_GER16.c: In function ‘_A_print’:
./material/code-generation-test/OK_GER16.c:67:27: error: invalid use of void expression
   67 |     printf("%d", (self->vt[0] )(self));
      |                  ~~~~~4 1 2 3 4
~~~~~
./material/code-generation-test/OK_GER16.c: In function ‘_B_print’:
./material/code-generation-test/OK_GER16.c:113:27: error: invalid use of void expression
  113 |     printf("%d", (self->vt[4] )(self));
      |                  ~~~~~~~~~^~~~~~~~~~~
./material/code-generation-test/OK_GER16.c:115:27: error: invalid use of void expression
  115 |     printf("%d", (self->vt[0] )(self));
      |                  ~~~~~~~~~^~~~~~~~~~~
./material/code-generation-test/OK_GER16.c: In function ‘_Program_run’:
./material/code-generation-test/OK_GER16.c:183:25: error: invalid use of void expression
  183 |     printf("%d", (_b->vt[4] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER16.c:190:25: error: invalid use of void expression
  190 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER16.c:192:25: error: invalid use of void expression
  192 |     printf("%d", (_b->vt[0] )(_b));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER16.c:195:25: error: invalid use of void expression
  195 |     printf("%d", (_a->vt[0] )(_a));
      |                  ~~~~~~~^~~~~~~~~
./material/code-generation-test/OK_GER16.c:198:25: error: invalid use of void expression
  198 |     printf("%d", (_c->vt[4] )(_c));
      |                  ~~~~~~~^~~~~~~~~
Error when compiling the C code of file './material/code-generation-test/OK_GER21.c' generated by the Cianeto compiler (exit code 1)
./material/code-generation-test/OK_GER21.c: In function ‘_Program_print’:
./material/code-generation-test/OK_GER21.c:95:45: error: invalid use of void expression
   95 |     printf("%d", (self->_class_Program_a->vt[1] )(self->_class_Program_a));
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Executing the C code of file './material/code-generation-test/OK_GER22.c'
Error when executing the code generated by the C compiler (exit code 129)
